--- a/support/android/apk/app/build.gradle
+++ b/support/android/apk/app/build.gradle
@@ -10,10 +10,11 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
+        //applicationId "com.servo.rollercoaster"
         applicationId "com.mozilla.servo"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 4
+        versionCode 3
         versionName "1.0.0"
         jackOptions {
             enabled true
@@ -71,6 +72,7 @@ android {
         }
 
         release {
+            debuggable true
             signingConfig signingConfigs.debug // Change this to sign with a production key
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
