--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ opt-level = 3
 # Uncomment to profile on Linux:
 # debug = true
 # lto = false
+
+[replace]
+"https://github.com/servo/webrender#0.36.0" = { path = '/home/mortimer/Projects/webrender/webrender' }
+"https://github.com/servo/webrender#webrender_traits:0.36.0" = { path = '/home/mortimer/Projects/webrender/webrender_traits' }
